# julian

./: .gitignore  README.md
Documentation/: fieldml_heart.cmgui  heart.json  heart.rdf  heart.xml  index.html  interpolationtest.exfile.txt
Exfiles/: example_a3.com  heart.exelem
cpp/: CMakeLists.txt  exfile_reader.cpp  fiber_angles.cpp  fiber_vector.py  mesh_generator.cpp  myexe  prolate_spheroidal_to_euclidian.cpp  test.cpp  vtu_converter.cpp  vtu_write.cpp
lua_scripts/: laplace_sample_grid_3d.ugx  transient-nonlinear-fitzhugh-nagumo.lua  transient-nonlinear-fitzhugh-nagumo3d.lua
plugin/: fiber_angles.cpp  fibre_field.h  fibre_field_old.h  octree.cpp  opencmiss_plugin.cpp
thesis/: template_thesis.alg  template_thesis.aux  template_thesis.bbl  template_thesis.bib  template_thesis.blg  template_thesis.dvi  template_thesis.glg  template_thesis.ist  template_thesis.out  template_thesis.synctex(busy)  template_thesis.tex  template_thesis.toc
vtu_converter/: .generate_mesh.py.swp  cells_angles.txt  connectivity.txt  coordinates_euclidian.txt  coordinates_prolate_spheroidal.txt  exfile_reader.py  fibre_values_spheroidal.txt  fibres.exfile  fibres.vtu  fibres_nodes.txt  fibres_nodes_euclidian.txt  generate_mesh.py  heart.exfile  heart_0.vtu  heart_00.vtu  heart_01.vtu  heart_1.vtu  heart_111.vtu  heart_123.vtu  heart_331.vtu  interpolation.exfile  mesh_generator.py  plswor.exfile  prolate_spheroidal_to_euclidian.py  test_connectivity.txt  vtu_converter.py  vtu_read.py  vtu_write.py
vtu_converter/vtu_data/: cellTypesVTU.txt  cellTypesVTU_angles.txt  cells.txt  cells_angles.txt  offset.txt  offset_angles.txt  region.txt  region_angles.txt  (+2 more)
